hotel-reservation : - added validation for period when checkOut is after checkIn - added class Messages for displaying error messages - moved logic from service to repository for better optimisation - added exception handlers for handling response status exceptions and generic exceptions